# movie_analytics_etl

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TESTING_STRATEGY.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.bat  run_pipeline.sh
.github/: copilot-instructions.md
.github/workflows/: main.yml
analytics/: __init__.py  create_dashboard.py  movie_analytics_dashboard.html  sample_queries.md
dbt/movie_analytics/: README.md  dbt_project.yml  profiles.yml
dbt/movie_analytics/models/: sources.yml
dbt/movie_analytics/models/marts/: bridge_cast_crew.sql  dim_people.sql  dim_titles.sql  fact_ratings.sql  schema.yml
dbt/movie_analytics/models/staging/: schema.yml  stg_name_basics.sql  stg_title_akas.sql  stg_title_basics.sql  stg_title_principals.sql  stg_title_ratings.sql
dbt/movie_analytics/tests/: test_highly_rated_credibility.sql  test_rating_success_consistency.sql  test_ratings_valid_range.sql  test_reasonable_birth_years.sql  test_reasonable_career_span.sql  test_reasonable_movie_years.sql  test_reasonable_runtime.sql
ingestion/: __init__.py  config.py  load_raw.py  load_test_data.py
sql/: raw_schema.sql
